@@ -39,7 +39,7 @@ How to compile and install nano
      
 Web Page
 
-	http://www.asty.org/nano
+	http://www.nano-editor.org
      
 Mailing List and Bug Reports
 
@@ -54,7 +54,7 @@ Mailing List and Bug Reports
 	with a subject of "subscribe", where <name> is the list you want to
 	subscribe to.
 	For general bug reports, send a description of the problem to
-	nano@asty.org or directly to the development list.
+	nano@nano-editor.org or directly to the development list.
 
 Current Status
 
