@@ -118,7 +118,8 @@ will volunteer to maintain this FAQ someday, who knows...</font></blockquote>
 <a NAME="1.2"></a><font color="#330000">1.2. How do I contribute to it?</font></h2>
 
 <blockquote><font color="#330000">Your best bet is to send it to the nano
-email address, <a href="mailto:nano@asty.org">nano@asty.org</a> and if
+email address, <a
+href="mailto:nano@nano-editor.org">nano@nano-editor.org</a> and if
 it is useful enough it will be included in future versions.</font></blockquote>
 
 <h2>
@@ -191,7 +192,7 @@ see what the latest and greatest version is.</font></blockquote>
 without having to download the program!</font></h2>
 
 <blockquote><font color="#330000">Jeez, demanding, aren't we?&nbsp;&nbsp;
-Okay, look <a href="http://www.asty.org/nano/dist/nano.1.html">here</a>.</font></blockquote>
+Okay, look <a href="http://www.nano-editor.org/dist/nano.1.html">here</a>.</font></blockquote>
 
 <hr WIDTH="100%">
 <h1>
@@ -205,13 +206,13 @@ nano.</font></h2>
 at the following fine web and ftp sites:</font>
 <ul>
 <li>
-<font color="#330000"><a href="http://www.asty.org/nano/dist">http://www.asty.org/nano/dist</a></font></li>
+<font color="#330000"><a href="http://www.nano-editor.org/dist">http://www.nano-editor.org/dist</a></font></li>
 
 <li>
 <font color="#330000"><a href="http://www.ewtoo.org/~astyanax/nano/dist">http://www.ewtoo.org/~astyanax/nano/dist</a></font></li>
 
 <li>
-<font color="#330000"><a href="ftp://ftp.asty.org/pub/nano">ftp://ftp.asty.org/pub/nano</a></font></li>
+<font color="#330000"><a href="ftp://ftp.nano-editor.org/pub/nano">ftp://ftp.nano-editor.org/pub/nano</a></font></li>
 
 <li>
 <font color="#330000"><a href="ftp://nano.sourceforge.net/pub/nano/">ftp://nano.sourceforge.net/pub/nano</a></font></li>
@@ -225,13 +226,13 @@ packages.</font></h2>
 <blockquote>
 <ul>
 <li>
-<font color="#330000"><a href="http://www.asty.org/nano/dist/RPMS">http://www.asty.org/nano/dist/RPMS</a></font></li>
+<font color="#330000"><a href="http://www.nano-editor.org/dist/RPMS">http://www.nano-editor.org/dist/RPMS</a></font></li>
 
 <li>
 <font color="#330000"><a href="http://www.ewtoo.org/~astyanax/nano/dist/RPMS">http://www.ewtoo.org/~astyanax/nano/dist/RPMS</a></font></li>
 
 <li>
-<font color="#330000"><a href="ftp://ftp.asty.org/pub/nano/RPMS">ftp://ftp.asty.org/pub/nano/RPMS</a></font></li>
+<font color="#330000"><a href="ftp://ftp.nano-editor.org/pub/nano/RPMS">ftp://ftp.nano-editor.org/pub/nano/RPMS</a></font></li>
 
 <li>
 <font color="#330000"><a href="ftp://nano.sourceforge.net/pub/nano/RPMS">ftp://nano.sourceforge.net/pub/nano/RPMS</a></font></li>
@@ -347,7 +348,7 @@ keystroke here>!</font></h2>
 <blockquote><font color="#330000">If you aren't trying some bizarre keystroke
 combination with some bizarre $TERM entry, chances are you have found a
 bug.&nbsp;&nbsp; You are welcome to submit it to the nano-devel list or
-to <a href="mailto:nano@asty.org">nano@asty.org</a>.</font></blockquote>
+to <a href="mailto:nano@nano-editor.org">nano@nano-editor.org</a>.</font></blockquote>
 
 <h2>
 <a NAME="4.3"></a><font color="#330000">4.3. Nano crashes when I resize
@@ -406,7 +407,7 @@ my language!</font></h2>
 language to write one =-).&nbsp; Just grab the <b>nano.pot</b> file from
 the latest and greatest nano distribution (it's in the <b>po/</b> directory)
 and translate each line into your native language on the <b>msgstr</b>
-line.&nbsp; Then send it to the nano devel list or <a href="mailto:nano@asty.org">nano@asty.org</a>.</font></blockquote>
+line.&nbsp; Then send it to the nano devel list or <a href="mailto:nano@nano-editor.org">nano@nano-editor.org</a>.</font></blockquote>
 
 <h2>
 <a NAME="5.2"></a><font color="#330000">5.2. I don't like the translation
@@ -426,14 +427,14 @@ or the devel list.</font></blockquote>
 of Pico?</font></h2>
 
 <blockquote><font color="#330000">There are many reasons to use nano instead
-of Pico, a more complete list can be found at the <a href="http://www.asty.org/nano">nano
+of Pico, a more complete list can be found at the <a href="http://www.nano-edior.org">nano
 homepage</a>.</font></blockquote>
 
 <h2>
 <a NAME="6.2"></a><font color="#330000">6.2. Why should I use Pico instead
 of nano?</font></h2>
 
-<blockquote>Again, check out the <a href="http://www.asty.org/nano">nano
+<blockquote>Again, check out the <a href="http://www.nano-editor.org">nano
 homepage</a> for a good summary of reasons.&nbsp; It really is a matter
 of personal preference as to which editor you should use.&nbsp; If you're
 the type of person who likes using the original version of a program, then
@@ -510,8 +511,8 @@ a given list:</font><font color="#330000"></font>
 team a big load of cash (or just a thank you).</font></h2>
 
 <blockquote><font color="#330000">That's fine.&nbsp; Send it <a href="mailto:nano-devel@lists.sourceforge.net">our
-way</a>!&nbsp; Better yet, fix a <a href="http://www.asty.org/nano/dist/BUGS">bug</a>
-in the program or implement a <a href="http://www.asty.org/nano/dist/TODO">cool
+way</a>!&nbsp; Better yet, fix a <a href="http://www.nano-editor.org/dist/BUGS">bug</a>
+in the program or implement a <a href="http://www.nano-editor.org/dist/TODO">cool
 feature</a> and send us that instead (though cash is fine too).</font></blockquote>
 
 <h2>
