@@ -94,13 +94,13 @@ Enable suspend ability.
 Places cursor at LINE on startup.
 .SH BUGS
 Please send any comments or bug reports to
-.B nano@asty.org.
+.B nano@nano-editor.org.
 The nano mailing list is available from
 .B nano-devel@lists.sourceforge.net.
 To subscribe, email to nano-devel-request@lists.sourceforge.net with a
 subject of "subscribe".
 .SH HOMEPAGE
-http://www.asty.org/nano
+http://www.nano-editor.org
 .SH AUTHOR
 Chris Allegretta <chrisa@asty.org>, et al.  This manual page was
 originally written by Jordi Mallach <jordi@sindominio.net>, for the Debian
