@@ -132,7 +132,7 @@ Places cursor at LINE on startup.
 <H2>BUGS</H2>
 
 Please send any comments or bug reports to
-<B><A HREF="mailto:nano@asty.org">nano@asty.org</A>.</B>
+<B><A HREF="mailto:nano@nano-editor.org">nano@nano-editor.org</A>.</B>
 
 The nano mailing list is available from
 <B><A HREF="mailto:nano-devel@lists.sourceforge.net">nano-devel@lists.sourceforge.net</A>.</B>
@@ -142,7 +142,7 @@ subject of &quot;subscribe&quot;.
 <A NAME="lbAG">&nbsp;</A>
 <H2>HOMEPAGE</H2>
 
-<A HREF="http://www.asty.org/nano">http://www.asty.org/nano</A>
+<A HREF="http://www.nano-editor.org">http://www.nano-editor.org</A>
 <A NAME="lbAH">&nbsp;</A>
 <H2>AUTHOR</H2>
 
